# tensegrity

./: .gitignore  README.md
control/: CMakeLists.txt  README.md  package.xml
control/calibration/: calibration.json  displacement_dict_rolling.pkl  legacy_motion_primitives.pkl  new_calibration.json  new_platform_primitive_dict.pkl  new_platform_transformation_table.pkl  new_platform_transformation_table_wrong.pkl  patrick_primitive_dict.pkl  patrick_transformation_table.pkl  patrick_transformation_table_renamed.pkl  primitive_dict.pkl  transformation_table.pkl
control/electronics/: v3 Tensegrity Motherboard.brd  v3 Tensegrity Motherboard.sch
control/msg/: Action.msg  Imu.msg  ImuStamped.msg  Motor.msg  NodesStamped.msg  StampedIndex.msg  Trajectory.msg
control/onboard/: UDP_AccSensor_CapSensor_DcDriver_V2.ino
control/onboard/onboard.ino/: onboard.ino.ino
control/src/: RL.py  Tensegrity_model_inputs.py  astar.py  calc_Node_Pos_cable_len_errors.py  close_node.py  image_publisher.py  json2csv.py  legacy_manual_control.py  legacy_run_tensegrity.py  legacy_run_tensegrity_Astar.py  legacy_run_tensegrity_RL.py  legacy_sensor_calibration.py  live_render_reconstruction.py  manual_control.py  planner.py  plotting_utils.py  points_superimposed.py  policy.py  policy_vel.py  read_control_data.py  reconstruction_listener.py  reformat_dictionary.py  run_tensegrity.py  run_tensegrity_Astar.py  run_tensegrity_RL.py  sensor_calibration.py  symmetry_reduction_utils.py  sync_data.py  test_RL_policy.py  util_heuristic.py  utils.py  visualize_frame_rate.py  visualize_rgbd.py  voice_calibration.py  voice_calibration_offline.py
control/src/actors/: actor_9900000_wpik4af.pth
control/src/images/: config.json
estimation/: CMakeLists.txt  README.md  package.xml
estimation/include/: .keep
estimation/include/estimation/: SE3_observation_factor.hpp  bar_defs.hpp  bar_distance_factor.hpp  bar_utilities.hpp  bars_perception_factors.hpp  cable_sensor_subscriber.hpp  cheb_factors.hpp  cheb_utils.hpp  ekf.hpp  endcap_observation_factor.hpp  endcap_subscriber.hpp  pose_from_poly.hpp  sensors_subscriber.hpp  snapshot_nodelet.hpp  tensegrity_cap_obs_factor.hpp  tensegrity_estimation.hpp  ty_endcap_dyn_z_factor.hpp
estimation/launch/: ekf_estimation.launch  shape_only_estimation.launch  snapshot_estimation.launch  state_estimation.launch  traj_estimation.launch
estimation/src/: cable_only_estimation.cpp  chev_endcaps.cpp  chev_estimation.cpp  ekf_estimation.cpp  endcap_factor_query.cpp  full_traj_estimation.cpp  incremental_estimation.cpp  open_loop_learned_dynamics.cpp  snapshot_estimation.cpp  snapshot_estimation_2.cpp  state_estimation.cpp  traj_estimation.cpp  traj_estimation_windowed.cpp  trajectory_estimation.cpp
estimation/src/nodelets/: nodelets.cpp  nodelets.xml
infraestructure/factor_graphs/: CMakeLists.txt  README.md  package.xml
infraestructure/interface/: CMakeLists.txt  README.md  package.xml  setup.py
infraestructure/interface/config/: rosbag_record.yaml
infraestructure/interface/include/interface/: bars_array_to_markers.hpp  copy.hpp  defs.hpp  eigen_interface.cpp  endcaps_to_file.hpp  gtsam_interface.hpp  node_status.hpp  ros_camera_interface.hpp  rosbag_record.hpp  tensegrity_bars_to_file.hpp  tensegrity_bars_to_markers.hpp  tensegrity_state_to_file.hpp  tensegrity_trajectory_to_markers.hpp  tf_util.hpp  torch_eigen_bridge.hpp  torch_nn_interface.hpp  type_conversions.hpp
infraestructure/interface/launch/: camera_info_publisher.launch  collect_all_images.launch  data_collection.launch  open_loop_sim.launch  pointcloud_from_imgs.launch  pose_image_overlay.launch  rosbag_record.launch  run_chev_endcaps.launch  run_chev_estimation.launch  run_icp3d_experiment.launch  run_offline_experiment.launch  run_offline_snapshot2.launch  run_sim_cheb.launch  run_sim_trajectory.launch  simulated_data.launch  traj_estimation_windowed.launch
infraestructure/interface/models/: new_platform_script_sim.pt  old_platform_script_sim_v2.pt
infraestructure/interface/msg/: Info.msg  MotorsStamped.msg  Node.msg  NodeStatus.msg  Sensor.msg  SensorsStamped.msg  State.msg  TensegrityBars.msg  TensegrityBarsArray.msg  TensegrityEndcaps.msg  TensegrityLengthSensor.msg  TensegrityStamped.msg  TensegrityTrajectory.msg
infraestructure/interface/scripts/: camera_info_publisher.py  cheb_comparison.py  cheb_sim_comparison.py  endcaps_to_image.py  gt_data_comparison.py  images_to_topic.py  merge_videos.py  pose_image_overlay.py  shape_evaluation.py  sim_data_publisher.py  status_broadcaster.py  status_finish_and_exit.py  status_funnel.py  status_wait_and_run.py  tensegrity_data_playback.py  tensegrity_pose_publisher.py  tensegrity_topics_to_files.py  trajectory_comparison.py  vision_evaluation.py
infraestructure/interface/src/: rosbag_record.cpp
infraestructure/interface/src/interface/: cheb_utils.py  node_status.py
infraestructure/interface/src/nodelets/: nodelets.cpp  nodelets.xml
infraestructure/utils/: CMakeLists.txt  README.md  package.xml
infraestructure/utils/include/tensegrity_utils/: assert.hpp  constants.hpp  csv_reader.hpp  dbg_utils.hpp  gnn.hpp  rosparams_utils.hpp  std_utils.hpp  template_utils.hpp  time_meassurement.hpp  type_conversions.hpp
infraestructure/utils/src/: sim_clock.cpp
infraestructure/utils/src/nodelets/: nodelets.xml
infraestructure/utils/tests/: test_gnn.cpp
perception/: CMakeLists.txt  README.md  package.xml
perception/cfg/: ColorFilter.cfg  TensegrityInitialization.cfg  TensegrityInitialization.py
perception/config/2025-01-23_16-38-18/: blue.yaml  (+2 more)
perception/launch/: endcaps_to_file.launch  poly_visualization.launch  tensegrity_endcap.launch  tensegrity_endcap_v2.launch  tensegrity_estimation.launch  tensegrity_filter.launch  tensegrity_from_imgs.launch
perception/scripts/: tensegrity_initialization.py
perception/src/: bar_image_icp.cpp  bars_depth_icp.cpp  bars_icp2d.cpp  color_filter_manual_calib.cpp  image_fg_test.cpp  img_diff_test.cpp  line_based_estimation.cpp  pointcloud_from_imgs.cpp  tensegrity_initializer.cpp  topic_to_video.cpp
(+26 files in other folders)
